# rust-pg-backend-demo

./: .env  Cargo.toml  readme.md  tailwind.config.js
migrations/2024-06-09-074103_create_server_config_db/: down.sql  up.sql
migrations/2024-06-12-063629_user_and_auth/: up.sql
migrations/2024-06-14-060530_user_tokens/: up.sql
src/: build.rs  config.rs  errors.rs  main.rs  routes.rs  schema.rs
src/domains/models/: mod.rs  server.rs  users.rs
src/handlers/servers/: create_server.rs  delete_server.rs  list_servers.rs  mod.rs
src/handlers/user/: mod.rs
src/infra/: errors.rs  mod.rs
src/infra/middleware/: auth_middleware.rs
src/infra/respository/: mod.rs  servers.rs  user.rs
src/utils/custom_extractors/: json_extractor.rs
www/: index.html  sign_in.html  sign_up.html
